--- a/LiveStone/LSSearchHistoryHeaderView.xib
+++ b/LiveStone/LSSearchHistoryHeaderView.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UITableViewHeaderFooterView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -24,6 +24,7 @@
                     </state>
                 </button>
             </subviews>
+            <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="eno-V9-4cw" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="3hw-sv-Ldc"/>
                 <constraint firstItem="eno-V9-4cw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="WIN-vt-uGH"/>
