--- a/LiveStone/LSSearchResultTableViewCell.xib
+++ b/LiveStone/LSSearchResultTableViewCell.xib
@@ -11,16 +11,34 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="创世纪  1:18" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f6j-Vo-aOU">
-                        <rect key="frame" x="8" y="8" width="155" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="创世纪  1:18" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f6j-Vo-aOU">
+                        <rect key="frame" x="8" y="8" width="304" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="Ulv-fy-ORd"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jBA-Nw-K6L">
+                        <rect key="frame" x="8" y="37" width="304" height="34"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="jBA-Nw-K6L" secondAttribute="trailing" constant="8" id="BdK-sc-IYR"/>
+                    <constraint firstAttribute="bottom" secondItem="jBA-Nw-K6L" secondAttribute="bottom" constant="8" id="BzN-M5-w4X"/>
+                    <constraint firstAttribute="trailing" secondItem="f6j-Vo-aOU" secondAttribute="trailing" constant="8" id="Gjb-xA-aoP"/>
+                    <constraint firstItem="f6j-Vo-aOU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="QgG-Lh-wfj"/>
+                    <constraint firstItem="jBA-Nw-K6L" firstAttribute="top" secondItem="f6j-Vo-aOU" secondAttribute="bottom" constant="8" id="feA-Tx-g7C"/>
+                    <constraint firstItem="jBA-Nw-K6L" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="pSS-zG-ASL"/>
+                    <constraint firstItem="f6j-Vo-aOU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="szV-vP-Fgv"/>
+                </constraints>
             </tableViewCellContentView>
         </tableViewCell>
     </objects>
